--- a/proyecto/main/index.html
+++ b/proyecto/main/index.html
@@ -36,7 +36,8 @@
                             <span class="close" id="closeSpan">x</span>
                         </div>
                     </div>
-            </div>
+                </div>
+                <h1 id="notFound" class="pokemon--not-found">Not Found...</h1>
         </section>
     </main>
 </body>
