--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -10,23 +10,25 @@
 <body>
     <main>
         <div class="container--poke-logo-portada">
-            <img src="../icons/pokesPortada.jpg" alt="" class="poke-portada">
+            <img src="../icons/pokemon-23.svg" alt="" class="pokemon--logo">
+            <img src="../icons/pokesPortada.png" alt="" class="poke-portada">
         </div>
-        <img src="../icons/pokemon-23.svg" alt="" class="pokemon--logo">
         <div class="container-pokeForm">   
             <div class="form--top">
                 <h3>Fill the form & Sign Up</h3>
             </div>              
             <form action="" id="form" class="main-form">
                 <label for="name" class="main-form--text" re>Nickname:</label>
-                    <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="  Type a nickname" required >         
+                    <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="  Type a nickname" required>         
                 <label for="mail" class="main-form--text">Email:</label>
-                    <input type="email" id="mail" name="user_mail" class="main-form--design-inputs" placeholder="  carlos@gmail.com" required>
+                    <input type="email" id="email" name="user_mail" class="main-form--design-inputs" placeholder="  carlos@gmail.com" required>
                 <label for="password" class="main-form--text">Password:</label>
-                    <input type="password" id="password" class="main-form--design-inputs" placeholder="   6+ chararcters" required>
-            <button type="submit" class="button-form main-form--text" id="acount">Create Account</button>          
+                    <input type="password" id="password" class="main-form--design-inputs" placeholder="   8+ chararcters"  required>
+            <button type="submit" class="button-form main-form--text" id="acount">Create Account</button>     
+            <p class="warnings text-warning" id="warnings"></p>       
             </form>
         </div>
     </main>
 </body>
+<script src="./index_res.js"></script>
 </html>
