--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style_res.css">
     <title>Register</title>
 </head>
@@ -15,10 +17,10 @@
         </div>
         <div class="container-pokeForm">   
             <div class="form--top">
-                <h3>Fill the form & Sign Up</h3>
+                <h3 class="form-title">Fill the form & Sign Up</h3>
             </div>              
             <form action="" id="form" class="main-form">
-                <label for="name" class="main-form--text" re>Nickname:</label>
+                <label for="name" class="main-form--text">Nickname:</label>
                     <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="  Type a nickname" required>         
                 <label for="mail" class="main-form--text">Email:</label>
                     <input type="email" id="email" name="user_mail" class="main-form--design-inputs" placeholder="  carlos@gmail.com" required>
