--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <div class="container--poke-logo-portada">
-            <img src="../icons/pokemon-23.svg" alt="" class="pokemon--logo">
-            <img src="../icons/pokesPortada.png" alt="" class="poke-portada">
+            <img src="../icons/pokemon-23.svg" alt="pikachu" class="pokemon--logo">
+            <img src="../icons/pokesPortada.png" alt="Logo" class="poke-portada">
         </div>
         <div class="container-pokeForm">   
             <div class="form--top">
