--- a/proyecto/main/index.html
+++ b/proyecto/main/index.html
@@ -25,7 +25,7 @@
             <div class="pokeModalup" id="pokeBlock">
                 <div class="modal-content" id="color-target">
                     <p  class="pokeModalText" id="pokemon-name"></p>
-                    <img src="" alt="" class="img-target_MODAL" id="pokeImgs">
+                    <img class="img-target_MODAL" id="pokeImgs">
                     <p  class="modal--card-text" id="pokeXp"></p>
                     <div  class="modal--card-text" id="pokeHability"></div>
                     <p class="modal--card-text" id="poke-weight"></p>
