--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -26,7 +26,7 @@
                     <input type="email" id="email" name="user_mail" class="main-form--design-inputs" placeholder="  carlos@gmail.com" required>
                 <label for="password" class="main-form--text">Password:</label>
                     <input type="password" id="password" class="main-form--design-inputs" placeholder="   8+ chararcters"  required>
-            <button type="submit" class="button-form main-form--text" id="acount">Create Account</button>     
+            <button type="submit" class="button-form main-form--text">Create Account</button>     
             <p class="warnings text-warning" id="warnings"></p>       
             </form>
         </div>
