--- a/proyecto/User Profile/index_user.html
+++ b/proyecto/User Profile/index_user.html
@@ -4,38 +4,48 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style_user.css">
     <title>User Profile</title>
 </head>
 <body>
     <main>
-        <div class="container-image-profile">
-            <h1 class="title-profile">Personal Data</h1>
-            <!-- previsualizar la imagen selecionada  -->
-            <div class="container--user_profile">
-                <img id="preview_image" class="user_profile">
-            </div>        
-            <!-- elegir la img de fondo de perfil -->
-            <input type="file" id="get_reference">
-            <label for="get_reference" class="button_profile"></label>
-        </div>
-        <div class="container-information--acount">
-            <p class="textprofile">Nickname</p>
-            <div class="information-acount">
-                <p class="text-of-profile">Carlos04</p>
+        <form action="" id="Complete-information" class="container-form">  
+            <div class="container-image-profile">
+                    <h1 class="title-profile">Personal Data</h1>
+                <div class="container--user_profile">
+                    <img id="preview_image" class="user_profile">
+                </div>        
+                <input type="file" id="get_reference">
+                <label for="get_reference" class="button_profile"></label>
             </div>
-            <p class="textprofile">Nickname</p>
-            <div class="information-acount">
-                <p class="text-of-profile">Carlos04</p>
-            </div>
-            <p class="textprofile">Nickname</p>
-            <div class="information-acount">
-                <p class="text-of-profile">Carlos04</p>
-            </div>
-        </div>
+            <div class="container-information--acount">
+                <label class="text-title" for="name">Your Name</label>
+                <input type="text" id="name" class="information-acount">
 
+                <label class="text-title" for="nickname">Nickname</label>
+                <input type="text" id="nickname" class="information-acount">
+
+                <label class="text-title" for="email">Email</label>
+                <input type="email" id="email" class="information-acount">
+
+                <label class="text-title" for="user_birthday">Date of Birth</label>
+                <input type="date" id="user_birthday" class="information-acount">
+
+                <label class="text-title">Gender</label>
+                <div class="information-acount--gender">
+                    <div class="buttons-gender">
+                        <input id="male" type="radio" name="male-female" value="male" checked>
+                        <label for="male" class="text-title adjust-text">Male</label>
+                    </div>
+                    <div class="buttons-gender">
+                        <input id="female" type="radio" name="male-female" value="female">
+                        <label for="female" class="text-title adjust-text">Female</label>
+                    </div>
+                </div>
+                <!-- <button type="submit">Create Account</button>      -->
+            </div>
+        </form> 
+        <img src="../icons/pikachu_res .png" alt="" class="pikachu_res">
     </main>
 </body>
 <script src="./main_user.js"></script>
