--- a/proyecto/main/index.html
+++ b/proyecto/main/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
-    <title>cards section</title>
+    <title>Cards Section</title>
 </head>
 <body>
     <header>
@@ -37,7 +37,7 @@
                         </div>
                 </div>
             </div>
-            <h1 id="notFound" class="pokemon--not-found">Not Found...</h1>
+            <!-- <h1 id="notFound" class="pokemon--not-found">Not Found...</h1> -->
         </section>
     </main>
 </body>
