--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -12,14 +12,14 @@
 <body>
     <main>
         <div class="container--poke-logo-portada">
-            <img src="../icons/pokemon-23.svg" alt="pikachu" class="pokemon--logo">
-            <img src="../icons/pokesPortada.png" alt="Logo" class="poke-portada">
+            <img src="../icons/pokemon-23.svg" alt="logo" class="pokemon--logo" id="change_pokemon">
+            <img src="../icons/pokesPortada.png" alt="pikachu pokemon" class="poke-portada">
         </div>
         <div class="container-pokeForm">   
             <div class="form--top">
                 <h3 class="form-title">Fill the form & Sign Up</h3>
             </div>            
-            <form action="" id="form" class="main-form">
+            <form action="" id="form" class="main-form" value="data-user-login">
                 <label for="name" class="main-form--text">Nickname:</label>
                     <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="  Type a nickname" required>         
                 <label for="mail" class="main-form--text">Email:</label>
