--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style_res.css">
+    <link rel="stylesheet" href="./style_res.css">
     <title>Register</title>
 </head>
 <body>
