--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -18,7 +18,7 @@
                 <span class="search-icon"></span>
             </div>
         </div>
-            <img src="../icons/Pokemon_Trainer_Boy_icon-icons.com_67516.png" alt="Profile_img" class="profile-img" id="user_profile" >
+            <img src="../icons/Pokemon_Trainer_Boy.png" alt="Profile_img" class="profile-img" id="user_profile" >
     </header>
     <main>
         <section  class="Poke-container" id="cards-content">
