--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -27,7 +27,7 @@
                 <input type="text" id="name" class="information-acount">
 
                 <label class="text-title" for="nickname">Nickname</label>
-                <input type="text" id="nickname" class="information-acount">
+                <input type="text" id="nickname_user" class="information-acount">
 
                 <label class="text-title" for="email">Email</label>
                 <input type="email" id="email" class="information-acount">
