--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <main>
-        <form action="" id="Complete-information" class="container-form">  
+        <form action="" id="Complete-information" class="container-form">
+            <!-- 1  -->
             <div class="container-image-profile">
                 <div class="container-edit-profile">
                     <h1 class="title-profile">Personal Data </h1>
@@ -17,23 +18,26 @@
                 </div>
                 <div class="container--user_profile">
                     <img id="preview_image" class="user_profile">
-                </div>  
+                </div>
                 <!-- obtener la imagen de la galeria-->
                 <input type="file" id="get_reference">
                 <label for="get_reference" class="button_profile" title="Change your image"></label>
             </div>
+            <div class="all-information-container">
             <div class="container-information--acount">
                 <label class="text-title" for="name">Your Name</label>
-                <input type="text" id="name" class="information-acount">
+                <input type="text" id="name" class="information-acount" disabled>
 
                 <label class="text-title" for="nickname">Nickname</label>
-                <input type="text" id="nickname_user" class="information-acount">
+                <input type="text" id="nickname_user" class="information-acount" disabled>
 
                 <label class="text-title" for="email">Email</label>
-                <input type="email" id="email" class="information-acount">
-
+                <input type="email" id="email" class="information-acount" disabled>
+            </div>
+<!-- 2 -->
+            <div class="container-information--acount">
                 <label class="text-title" for="user_birthday">Date of Birth</label>
-                <input type="date" id="user_birthday" class="information-acount">
+                <input type="date" id="user_birthday" class="information-acount" disabled>
 
                 <label class="text-title">Gender</label>
                 <div class="information-acount--gender">
@@ -46,9 +50,11 @@
                         <label for="female" class="text-title adjust-text">Female</label>
                     </div>
                 </div>
-                <!-- <button type="submit">Create Account</button>-->
+                <button type="submit" class="button--edit-profile text-title">Save</button>
             </div>
-        </form> 
+        </div>
+        </form>
+        <button id="regresar">regresar</button>
     </main>
 </body>
 <script src="./main_user.js"></script>
