--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -18,7 +18,10 @@
                 <span class="search-icon"></span>
             </div>
         </div>
-            <img src="../icons/Pokemon_Trainer_Boy.png" alt="Profile_img" class="profile-img" id="user_profile" >
+        <div class="container-profile--img" id="user_profile">
+            <img alt="Profile_img" class="profile-img" title="view your profile" id="profile-img--cards">
+            <p class="user-name" id="user-name--cards"></p>
+        </div>
     </header>
     <main>
         <section  class="Poke-container" id="cards-content">
