--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -21,7 +21,7 @@
             </div>            
             <form action="" id="form" class="main-form" value="data-user-login">
                 <label for="name" class="main-form--text">Nickname:</label>
-                    <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="  Type a nickname" required>         
+                    <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="  Type a nickname" max="Carlos1223" min="carlos" required>         
                 <label for="mail" class="main-form--text">Email:</label>
                     <input type="email" id="email" name="user_mail" class="main-form--design-inputs" placeholder="  carlos@gmail.com" required>
                 <label for="password" class="main-form--text">Password:</label>
