working user profile

--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -12,7 +12,7 @@
         <form action="" id="Complete-information" class="container-form">
             <div class="container-image-profile">
                 <div class="container-edit-profile">
-                    <h1 class="title-profile">Personal Data </h1>
+                    <h1 class="title-profile">Personal Data</h1>
                     <span class="edit-profile" title="Edit your profile" id="edit_profile"></span>
                 </div>
                 <div class="container--user_profile">
@@ -21,7 +21,6 @@
                 <input type="file" id="get_reference">
                 <label for="get_reference" class="button_profile" title="Change your image"></label>
             </div>
-            <!-- cambiar la informacion  -->
             <div class="all-information-container">
             <div class="container-information--acount">
                 <label class="text-title" for="name_user">Your Name</label>
@@ -49,7 +48,7 @@
                     </div>
                 </div>
                 <button type="submit" class="button--edit-profile text-title" id="button_Profile">Save</button>
-                <!-- <button id="regresar" class="button-back">Return</button> -->
+                <button id="regresar" class="button-back">Return</button>
             </div>
         </div>
     </form>
