--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -38,20 +38,20 @@
 
                 <label class="text-title">Gender</label>
                 <div class="information-acount--gender">
-                    <div class="buttons-gender">
+                    <div class="buttons-gender" id="button-hidden">
                         <input id="male" type="radio" name="male-female" value="male" disabled>
                         <label for="male" class="text-title adjust-text">Male</label>
                     </div>
-                    <div class="buttons-gender" id="buttonF">
-                        <input id="female" type="radio" name="male-female"  disabled>
+                    <div class="buttons-gender" id="btn-hidden">
+                        <input id="female" type="radio" name="male-female" value="female" disabled>
                         <label for="female" class="text-title adjust-text">Female</label>
                     </div>
                 </div>
                 <button type="submit" class="button--edit-profile text-title" id="button_Profile">Save</button>
-                <button id="regresar" class="button-back">Return</button>
             </div>
         </div>
     </form>
+    <button id="back" class="button-back">Return</button>
     </main>
 </body>
 <script src="./main_user.js"></script>
