add changes to user profile

--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -22,16 +22,16 @@
                 <label for="get_reference" class="button_profile" title="Change your image"></label>
             </div>
             <div class="all-information-container">
-            <!--  -->
             <div class="container-information--acount">
+                <!--  -->
                 <label class="text-title" for="name_user">Your Name</label>
-                <input type="text" id="name_user" class="information-acount"  disabled>
-                <!-- -->
+                <input type="text" id="name_user" class="information-acount"  required disabled>
+
                 <label class="text-title" for="nickname_user">Nickname</label>
-                <input type="text" id="nickname_user" class="information-acount"  disabled>
-            <!--  -->
+                <input type="text" id="nickname_user" class="information-acount" required disabled>
+                <!--  -->
                 <label class="text-title" for="email_user">Email</label>
-                <input type="email" id="email_user" class="information-acount" autocomplete="email" disabled>
+                <input type="email" id="email_user" class="information-acount" autocomplete="email" required disabled>
             </div>
             <div class="container-information--acount">
                 <label class="text-title" for="birthday_user">Date of Birth</label>
