working register and login

--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -12,8 +12,9 @@
 <body>
     <main>
         <div class="container--poke-logo-portada">
-            <img src="../icons/pokemon-23.svg" alt="logo" class="pokemon--logo" id="change_pokemon">
-            <img src="../icons/pokesPortada.png" alt="pikachu pokemon" class="poke-portada">
+            <img src="../icons/pokemon-23.svg" alt="logo" class="pokemon--logo">
+            <img src="../icons/pokesPortada.png" alt="pikachu pokemon" class="poke-portada" id="change_pokemon">
+            <!-- <img src="../icons/pokemons-portada(3).png" alt="pikachu pokemon" class="poke-portada"> -->
         </div>
         <div class="container-pokeForm">   
             <div class="form--top">
@@ -29,6 +30,7 @@
             <button type="submit" class="button-form main-form--text">Create Account</button>     
             <p class="warnings text-warning" id="warnings"></p>       
             </form>
+            <a href="#" class="Login-redirect" id="login-redirect">Login</a>
         </div>
     </main>
 </body>
