--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -16,21 +16,35 @@
             <img src="../icons/pokesPortada.png" alt="pikachu pokemon" class="poke-portada" id="change_pokemon">
             <!-- <img src="../icons/pokemons-portada(3).png" alt="pikachu pokemon" class="poke-portada"> -->
         </div>
-        <div class="container-pokeForm">   
+        <div class="container-pokeForm" id="traslate-create_acount">   
             <div class="form--top">
                 <h3 class="form-title">Fill the form & Sign Up</h3>
             </div>            
             <form action="" id="form" class="main-form" value="data-user-login">
                 <label for="name" class="main-form--text">Nickname:</label>
-                    <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="Type a nickname" max="Carlos1223" min="carlos" required>         
+                    <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="Type a nickname" required>         
                 <label for="mail" class="main-form--text">Email:</label>
                     <input type="email" id="email" name="user_mail" class="main-form--design-inputs" placeholder="carlos@gmail.com" required>
                 <label for="password" class="main-form--text">Password:</label>
                     <input type="password" id="password" class="main-form--design-inputs" placeholder="8+ chararcters"  required>
-            <button type="submit" class="button-form main-form--text">Create Account</button>     
+            <button type="submit" class="button-form main-form--text text-bold">Create Account</button>     
             <p class="warnings text-warning" id="warnings"></p>       
             </form>
-            <a href="#" class="Login-redirect" id="login-redirect">Login</a>
+            <a href="#" class="Login-redirect" id="login-redirect">Log in</a>
+        </div>
+        <div class="container-pokeForm  form_hidden" id="traslate-login">
+            <div class="form--top">
+                <h3 class="form-title">Sign Up</h3>
+            </div>            
+            <form action="" id="" class="main-form  " value="data-login">
+                <label for="name_login" class="main-form--text">Nickname:</label>
+                    <input type="text" id="name_login" name="user_name" class="main-form--design-inputs" placeholder="Type a nickname" required>         
+                <label for="password_login" class="main-form--text">Password:</label>
+                    <input type="password" id="password_login" class="main-form--design-inputs" placeholder="8+ chararcters"  required>
+            <button type="submit" class="button-form main-form--text text-bold">Sign Up</button>     
+            <p class="warnings text-warning" id="warnings_login"></p>       
+            </form>
+            <a href="#" class="Login-redirect" id="account-redirect">Create Account</a>
         </div>
     </main>
 </body>
