--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -46,6 +46,7 @@
     </main>
 </body>
 <script src="./main_cards.js"></script>
+<script src="../User-Profile/main_user.js"></script>
 <script src="../../utils/Cards_Generator.js"></script>
 <script src="../../utils/Change_first_letter.js"></script>
 </html>
