--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -37,7 +37,7 @@
                 <div class="form--top">
                     <h3 class="form-title">Sign Up</h3>
                 </div>            
-                <form action="" id="" class="main-form  " value="data-login">
+                <form action="" id="sesion-user" class="main-form  " value="data-login">
                     <label for="name_login" class="main-form--text">Nickname:</label>
                         <input type="text" id="name_login" name="user_name" class="main-form--design-inputs" placeholder="Type a nickname" required>         
                     <label for="password_login" class="main-form--text">Password:</label>
