--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -33,7 +33,7 @@
                     <div  class="modal--card-text" id="pokeHability"></div>
                     <p class="modal--card-text" id="poke-weight"></p>
                     <p class="modal--card-text" id="poke-color"></p>
-                    <ul class="modal--card-text" id="pokeTypes"></ul>
+                    <p class="modal--card-text" id="pokeTypes"></p>
                     <p class="modal--card-text" id="pokeBio"></p>
                         <div class="container-Close">
                             <span class="close" id="closeSpan">x</span>
