--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -23,7 +23,7 @@
                 </div>            
                 <form action="" id="form" class="main-form" value="data-user-login">
                     <label for="name" class="main-form--text">Nickname:</label>
-                        <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="Type a nickname" required>         
+                        <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="Type a nickname" maxlength="10" required>         
                     <label for="mail" class="main-form--text">Email:</label>
                         <input type="email" id="email" name="user_mail" class="main-form--design-inputs" placeholder="carlos@gmail.com" required>
                     <label for="password" class="main-form--text">Password:</label>
@@ -35,14 +35,14 @@
             </div>
             <div class="container-pokeForm  form_hidden" id="traslate-login">
                 <div class="form--top">
-                    <h3 class="form-title">Sign Up</h3>
+                    <h3 class="form-title">Log in</h3>
                 </div>            
                 <form action="" id="sesion-user" class="main-form  " value="data-login">
                     <label for="name_login" class="main-form--text">Nickname:</label>
                         <input type="text" id="name_login" name="user_name" class="main-form--design-inputs" placeholder="Type a nickname" required>         
                     <label for="password_login" class="main-form--text">Password:</label>
                         <input type="password" id="password_login" class="main-form--design-inputs" placeholder="8+ chararcters"  required>
-                <button type="submit" class="button-form main-form--text text-bold">Sign Up</button>     
+                <button type="submit" class="button-form main-form--text text-bold">Log in</button>     
                 <p class="warnings text-warning" id="warnings_login"></p>       
                 </form>
                 <a href="#" class="Login-redirect" id="account-redirect">Create Account</a>
