working section  user

--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -52,6 +52,13 @@
             </div>
         </div>
     </form>
+    <div class="container-pokebolas">
+        <div class="pokebolas"></div>
+        <div class="pokebolas"></div>
+        <div class="pokebolas"></div>
+        <div class="pokebolas"></div>
+        <div class="pokebolas"></div>
+    </div>
     <button id="back" class="button-back">Return</button>
     </main>
 </body>
