--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -24,6 +24,7 @@
         </div>
     </header>
     <main>
+        <div class="preload-container" id="preload"></div>
         <section  class="Poke-container" id="cards-content">
             <div class="pokeModalup" id="pokeBlock">
                 <div class="modal-content" id="color-target">
