--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -52,12 +52,10 @@
             </div>
         </div>
     </form>
-    <div class="container-pokebolas">
-        <div class="pokebolas"></div>
-        <div class="pokebolas"></div>
-        <div class="pokebolas"></div>
-        <div class="pokebolas"></div>
-        <div class="pokebolas"></div>
+    <div class="container-pokeball">
+        <img class="pokeball" id="pokeball1">
+        <p class="text-ball" id="text_pokeball"></p>    
+        <img  class="pokeball" id="pokeball2">
     </div>
     <button id="back" class="button-back">Return</button>
     </main>
