--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -31,10 +31,10 @@
                     <p  class="pokeModalText" id="pokemon-name"></p>
                     <img class="img-target_MODAL" id="pokeImgs">
                     <p  class="modal--card-text" id="pokeXp"></p>
-                    <div  class="modal--card-text" id="pokeHability"></div>
+                    <ul class="modal--card-text" id="pokeHability"></ul>
                     <p class="modal--card-text" id="poke-weight"></p>
                     <p class="modal--card-text" id="poke-color"></p>
-                    <p class="modal--card-text" id="pokeTypes"></p>
+                    <ul class="modal--card-text" id="pokeTypes"></ul>
                     <p class="modal--card-text" id="pokeBio"></p>
                         <div class="container-Close">
                             <span class="close" id="closeSpan">x</span>
