--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -31,15 +31,19 @@
                     <p  class="pokeModalText" id="pokemon-name"></p>
                     <img class="img-target_MODAL" id="pokeImgs">
                     <p  class="modal--card-text" id="pokeXp"></p>
-                    <ul class="modal--card-text" id="pokeHability"></ul>
                     <p class="modal--card-text" id="poke-weight"></p>
                     <p class="modal--card-text" id="poke-color"></p>
-                    <ul class="modal--card-text" id="pokeTypes"></ul>
+                    <div class="modal--card-text" id="pokeHability">
+                        <!-- <div class="hability-content">
+                            <p>Hability</p>
+                            <span class="arrow"></span>
+                        </div> -->
+                    </div>
+                    <div class="modal--card-text" id="pokeTypes"></div>
                     <p class="modal--card-text" id="pokeBio"></p>
                         <div class="container-Close">
                             <span class="close" id="closeSpan">x</span>
                         </div>
-                    <button class="button_select-pokemon" id="select-pokemon">Choose</button>
                 </div>
             </div>
             <!-- <h1 id="notFound" class="pokemon--not-found">Not Found...</h1> -->
