--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -53,9 +53,10 @@
         </div>
     </form>
     <div class="container-pokeball">
-        <img class="pokeball" id="pokeball1">
-        <p class="text-ball" id="text_pokeball"></p>    
-        <img  class="pokeball" id="pokeball2">
+        <div class="pokeballs" id="container_pokeball_selected">
+            <!-- <img class="pokeball" id="pokeball1"> -->
+            <!-- <p class="text-ball" id="text_pokeball"></p>     -->
+        </div>
     </div>
     <button id="back" class="button-back">Return</button>
     </main>
