--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -44,6 +44,7 @@
                         <div class="container-Close">
                             <span class="close" id="closeSpan">x</span>
                         </div>
+                    <button class="button_select-pokemon" id="select-pokemon"></button>
                 </div>
             </div>
             <!-- <h1 id="notFound" class="pokemon--not-found">Not Found...</h1> -->
