add changes to section user

--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -53,12 +53,10 @@
         </div>
     </form>
     <div class="container-pokeball">
-        <div class="pokeballs" id="container_pokeball_selected">
-            <!-- <img class="pokeball" id="pokeball1"> -->
-            <!-- <p class="text-ball" id="text_pokeball"></p>     -->
-        </div>
+        <img src="../icons/pokemon-23.svg" id="redirect_cards" class="title-pokemons_select" title="You can select more pokemons but if you choose more pokemones,You will lose your current pokemones">
+        <div class="pokeballs" id="container_pokeball_selected"></div>
     </div>
-    <button id="back" class="button-back">Return</button>
+    <button id="back" class="btn-grad">Return</button>
     </main>
 </body>
 <script src="./main_user.js"></script>
