--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style_res.css">
+    <link rel="icon" type="image/png" href="../icons/pokeball.png"/>
     <title>Register</title>
 </head>
 <body>
