--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -28,7 +28,6 @@
         <div class="preload-container" id="preload"></div>
         <section  class="Poke-container" id="cards-content">
             <div class="pokeModalup" id="pokeBlock">
-                <!-- container inf -->
                 <div class="modal-content" id="color-target">
                     <p  class="pokeModalText" id="pokemon-name"></p>
                     <img class="img-target_MODAL" id="pokeImgs">
@@ -45,18 +44,10 @@
                             <span class="close" id="closeSpan">x</span>
                         </div>
                         <p class="mtm_evolution">Evolutions</p>
-                    <div class="container_mtm" id="mtm_evolution">
-                        <img id="mtn1" class="mtm">
-                        <img id="mtn2" class="mtm">
-                        <img id="mtn3" class="mtm">
-                        <!--  
-                        <img src="../icons/pokemons-portada(3).png" class="">
-                        <img src="../icons/pokemons-portada(3).png" class="mtm"> -->
-                    </div>
+                    <div class="container_mtm" id="mtm_evolution"></div>
                     <button class="btn-grad" id="select-pokemon"></button>
                 </div>
             </div>
-            <!-- <h1 id="notFound" class="pokemon--not-found">Not Found...</h1> -->
         </section>
     </main>
 </body>
@@ -64,4 +55,6 @@
 <script src="../User-Profile/main_user.js"></script>
 <script src="../../utils/Cards_Generator.js"></script>
 <script src="../../utils/Change_first_letter.js"></script>
+<script src="../../utils/Evolution_generator.js"></script>
+<script src="../../utils/Fetch_evolution.js"></script>
 </html>
