add changes to card

--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -7,12 +7,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style_cards.css">
-    <link rel="icon" type="image/png" href="../icons/pokeball.png"/>
+    <link rel="icon" type="image/png" href="../assets/img/pokeball.png"/>
     <title>Cards Section</title>
 </head>
 <body>
     <header>
-        <img src="../icons/pokemon-23.svg" alt="logo_Pokemon" class="pokemon-logo">
+        <img src="../assets/icons/pokemon-23.svg" alt="logo_Pokemon" class="pokemon-logo">
         <div class="header-input">
             <div class="main-input-container">
                 <input type="text" placeholder="Search" id="search-pokemons">
