Register and login finalized

--- a/proyecto/Register/index_res.html
+++ b/proyecto/Register/index_res.html
@@ -7,14 +7,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style_res.css">
-    <link rel="icon" type="image/png" href="../icons/pokeball.png"/>
+    <link rel="icon" type="image/png" href="../assets/img/pokeball.png"/>
     <title>Register</title>
 </head>
 <body>
     <main>
         <div class="container--poke-logo-portada">
-            <img src="../icons/pokemon-23.svg" alt="logo" class="pokemon--logo">
-            <img src="../icons/pokesPortada.png" alt="pikachu pokemon" class="poke-portada" id="change_pokemon">
+            <img src="../assets/icons/pokemon-23.svg" alt="logo" class="pokemon--logo">
+            <img src="../assets/img/pokesPortada.png" alt="pikachu pokemon" class="poke-portada" id="change_pokemon">
         </div>
         <div class="container-forms">
             <div class="container-pokeForm" id="traslate-create_acount">   
