--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style_user.css">
-    <link rel="icon" type="image/png" href="../icons/pokeball.png"/>
+    <link rel="icon" type="image/png" href="../assets/img/pokeball.png"/>
     <title>User Profile</title>
 </head>
 <body>
@@ -54,9 +54,9 @@
         </div>
     </form>
     <div class="container-pokeball">
-        <img src="../icons/pokemon-23.svg" id="redirect_cards" class="title-pokemons_select" title="You can select more pokemons but if you choose more pokemones,You will lose your current pokemones">
+        <img src="../assets/icons/pokemon-23.svg" id="redirect_cards" class="title-pokemons_select" title="You can select more pokemons but if you choose more pokemones,You will lose your current pokemones">
         <div class="pokeballs" id="container_pokeball_selected">
-            <img src="../icons/pokeball.png" class="pokeball">
+            <img src="../assets/img/pokeball.png" class="pokeball">
         </div>
     </div>
     <button id="back" class="btn-grad">RETURN</button>
