add changes to cards

--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <img src="../assets/icons/pokemon-23.svg" alt="logo_Pokemon" class="pokemon-logo">
+        <img src="../assets/icons/pokemon-23.svg" alt="logo_Pokemon" class="pokemon-logo" id="redirect_login">
         <div class="header-input">
             <div class="main-input-container">
                 <input type="text" placeholder="Search" id="search-pokemons">
