--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -44,7 +44,9 @@
                             <span class="close" id="closeSpan">x</span>
                         </div>
                         <p class="mtm_evolution">Evolutions</p>
-                    <div class="container_mtm" id="mtm_evolution"></div>
+                    <div>
+                        <div class="container_mtm" id="mtm_evolution"></div>
+                    </div>
                     <button class="btn-grad" id="select-pokemon"></button>
                 </div>
             </div>
