working section user

--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <form action="" id="Complete-information" class="container-form">
+        <form id="Complete-information" class="container-form">
             <div class="container-image-profile">
                 <div class="container-edit-profile">
                     <h1 class="title-profile">Personal Data</h1>
@@ -54,9 +54,13 @@
         </div>
     </form>
     <div class="container-pokeball">
-        <img src="../assets/icons/pokemon-23.svg" id="redirect_cards" class="title-pokemons_select" title="You can select more pokemons but if you choose more pokemones,You will lose your current pokemones">
+        <img src="../assets/icons/pokemon-23.svg" id="redirect_cards" class="title-pokemons_select" title="You can select more pokemons but if you choose more pokemones,You will lose your current pokemons">
         <div class="pokeballs" id="container_pokeball_selected">
-            <img src="../assets/img/pokeball.png" class="pokeball">
+            <!-- <img id="poke1" src="../assets/img/pokeball.png" class="pokeball">
+            <img id="poke2" src="../assets/img/pokeball.png" class="pokeball">
+            <img id="poke3" src="../assets/img/pokeball.png" class="pokeball">
+            <img id="poke4" src="../assets/img/pokeball.png" class="pokeball">
+            <img id="poke5" src="../assets/img/pokeball.png" class="pokeball"> -->
         </div>
     </div>
     <button id="back" class="btn-grad">RETURN</button>
