working section user

--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -55,13 +55,7 @@
     </form>
     <div class="container-pokeball">
         <img src="../assets/icons/pokemon-23.svg" id="redirect_cards" class="title-pokemons_select" title="You can select more pokemons but if you choose more pokemones,You will lose your current pokemons">
-        <div class="pokeballs" id="container_pokeball_selected">
-            <!-- <img id="poke1" src="../assets/img/pokeball.png" class="pokeball">
-            <img id="poke2" src="../assets/img/pokeball.png" class="pokeball">
-            <img id="poke3" src="../assets/img/pokeball.png" class="pokeball">
-            <img id="poke4" src="../assets/img/pokeball.png" class="pokeball">
-            <img id="poke5" src="../assets/img/pokeball.png" class="pokeball"> -->
-        </div>
+        <div class="pokeballs" id="container_pokeball_selected"></div>
     </div>
     <button id="back" class="btn-grad">RETURN</button>
     </main>
