--- a/proyecto/User-Profile/index_user.html
+++ b/proyecto/User-Profile/index_user.html
@@ -54,7 +54,7 @@
         </div>
     </form>
     <div class="container-pokeball">
-        <img src="../assets/icons/pokemon-23.svg" id="redirect_cards" class="title-pokemons_select" title="You can select more pokemons but if you choose more pokemones,You will lose your current pokemons">
+        <img src="../assets/icons/pokemon-23.svg" class="title-pokemons_select" title="You can select more pokemons but if you choose more pokemones,You will lose your current pokemons">
         <div class="pokeballs" id="container_pokeball_selected"></div>
     </div>
     <button id="back" class="btn-grad">RETURN</button>
