--- a/proyecto/Cards/index_cards.html
+++ b/proyecto/Cards/index_cards.html
@@ -45,7 +45,9 @@
                         </div>
                         <p class="mtm_evolution">Evolutions</p>
                     <div>
-                        <div class="container_mtm" id="mtm_evolution"></div>
+                        <div class="container_mtm" id="mtm_evolution">
+                            <p class="mtm_evolution ntn" id="notEv">This Pokémon does not evolve.</p>
+                        </div>
                     </div>
                     <button class="btn-grad" id="select-pokemon"></button>
                 </div>
