--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../src/page/Register/style_res.css">
-    <link rel="icon" type="image/png" href="../src/assets/img/pokeball.png"/>
+    <link rel="stylesheet" href="/page/Register/style_res.css">
+    <link rel="icon" type="image/png" href="/assets/img/pokeball.png"/>
     <title>Register</title>
 </head>
 <body>
     <main>
         <div class="container--poke-logo-portada">
-            <img src="../src/assets/icons/pokemon-23.svg" alt="logo" class="pokemon--logo">
-            <img src="../src/assets/img/pokesPortada.png" alt="pikachu pokemon" class="poke-portada" id="change_pokemon">
+            <img src="/assets/icons/pokemon-23.svg" alt="logo" class="pokemon--logo">
+            <img src="/assets/img/pokesPortada.png" alt="pikachu pokemon" class="poke-portada" id="change_pokemon">
         </div>
         <div class="container-forms">
             <div class="container-pokeForm" id="traslate-create_acount">   
@@ -50,5 +50,5 @@
         </div>
     </main>
 </body>
-<script src="./page/Register/index_res.js"></script>
+<script src="/page/Register/index_res.js"></script>
 </html>
