working youyr favorite pokemon

--- a/src/pages/User-Profile/index.html
+++ b/src/pages/User-Profile/index.html
@@ -55,6 +55,7 @@
     </form>
     <div class="container-pokeball">
         <img src="../../assets/icons/pokemon-23.svg" class="title-pokemons_select">
+        <span class="edit_pokefav" id="edit_pokefav"></span>
         <div class="pokeballs" id="container_pokeball_selected"></div>
     </div>
     <button id="back" class="btn-grad">RETURN</button>
