--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                     <label for="name" class="main-form--text">Nickname:</label>
                         <input type="text" id="name" name="user_name" class="main-form--design-inputs" placeholder="Type a nickname" maxlength="10" required>         
                     <label for="mail" class="main-form--text">Email:</label>
-                        <input type="email" id="email" name="user_mail" class="main-form--design-inputs" placeholder="carlos@gmail.com" required>
+                        <input type="email" id="email" name="user_mail" class="main-form--design-inputs" placeholder="example@gmail.com" required>
                     <label for="password" class="main-form--text">Password:</label>
                         <input type="password" id="password" class="main-form--design-inputs" placeholder="8+ chararcters"  required>
                 <button type="submit" class="button-form main-form--text text-bold">Create Account</button>     
