--- a/src/pages/User-Profile/index.html
+++ b/src/pages/User-Profile/index.html
@@ -54,8 +54,10 @@
         </div>
     </form>
     <div class="container-pokeball">
-        <img src="../../assets/icons/pokemon-23.svg" class="title-pokemons_select">
-        <span class="edit_pokefav" id="edit_pokefav"></span>
+        <div class="container-edit_pokefav">
+            <img src="../../assets/icons/pokemon-23.svg" class="title-pokemons_select">
+            <span class="edit_pokefav" id="edit_pokefav"></span>
+        </div>
         <div class="pokeballs" id="container_pokeball_selected"></div>
     </div>
     <button id="back" class="btn-grad">RETURN</button>
