--- a/src/pages/User-Profile/index.html
+++ b/src/pages/User-Profile/index.html
@@ -55,7 +55,7 @@
     </form>
     <div class="container-pokeball">
         <div class="container-edit_pokefav">
-            <img src="/assets/icons/pokemon-23.svg" class="title-pokemons_select">
+            <img src="../../assets/icons/pokemon-23.svg" class="title-pokemons_select">
             <span class="edit_pokefav" id="edit_pokefav"></span>
         </div>
         <div class="pokeballs" id="container_pokeball_selected"></div>
